# ml-model-deployment-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: generate_ci_model.py
src/: __init__.py
src/app/: config.py  dependencies.py  main.py  routes.py  schemas.py
src/core/: exceptions.py
src/model/: predictor.py
tests/: conftest.py  test_error_handling.py  test_health.py  test_integration.py  test_model_dependency.py  test_predict_contract.py  test_validation.py
